# src/main/java/com/vertice/api/student/dto/StudentResponse.java
@@ -1,7 +1,0 @@
-package com.vertice.api.student.dto;
-
-public record StudentResponse(
-        Long id,
-        String name,
-        String email
-) {}
